--- a/src/css/style.css
+++ b/src/css/style.css
@@ -149,3 +149,7 @@ body {
 .redes-sociais .projetos {
   background-color: #e74641;
 }
+
+.redes-sociais .trailhead {
+  background-color: "#9a14e7"
+}
